--- a/Hi.UrlRewrite/packages.config
+++ b/Hi.UrlRewrite/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
+  <package id="Sitecore.Analytics.Aggregation.NoReferences" version="8.2.160729" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Analytics.Core.NoReferences" version="8.2.160729" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Analytics.Model.NoReferences" version="8.2.160729" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Analytics.NoReferences" version="8.2.160729" targetFramework="net452" developmentDependency="true" />
