--- a/Hi.UrlRewrite/Hi.UrlRewrite.csproj
+++ b/Hi.UrlRewrite/Hi.UrlRewrite.csproj
@@ -274,6 +274,7 @@
     <Content Include="sitecore modules\Shell\UrlRewrite\UrlRewriter.aspx" />
     <Content Include="App_Config\Include\Hi.UrlRewrite.Prefetch.Master.config" />
     <Content Include="App_Config\Include\Hi.UrlRewrite.Aggregation.config" />
+    <Content Include="App_Config\Include\Hi.UrlRewrite.EnableHtm.config" />
     <None Include="sitecore modules\Shell\UrlRewrite\Scripts\jquery-1.9.0.intellisense.js" />
     <Content Include="sitecore modules\Shell\UrlRewrite\Scripts\app.js" />
     <Content Include="sitecore modules\Shell\UrlRewrite\Scripts\bootstrap.js" />
